--- a/package.json
+++ b/package.json
@@ -9,20 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lucia-auth/adapter-prisma": "^4.0.1",
+    "@prisma/client": "^5.20.0",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-form": "^0.33.0",
     "@tanstack/react-query": "^5.59.0",
+    "@tanstack/zod-form-adapter": "^0.33.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "lucia": "^3.2.1",
     "lucide-react": "^0.447.0",
     "next": "14.2.14",
+    "prisma": "^5.20.0",
     "react": "^18",
     "react-dom": "^18",
     "react-query": "^3.39.3",
     "tailwind-merge": "^2.5.3",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
