--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-form": "^0.33.0",
     "@tanstack/react-query": "^5.59.0",
     "@tanstack/zod-form-adapter": "^0.33.0",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucia": "^3.2.1",
@@ -33,6 +34,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
