add signup and some of signin

--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "clsx": "^2.1.1",
     "lucia": "^3.2.1",
     "lucide-react": "^0.447.0",
-    "next": "14.2.14",
+    "next": "^15.0.0-rc.0",
     "prisma": "^5.20.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^19.0.0-rc-09111202-20241011",
+    "react-dom": "^19.0.0-rc-09111202-20241011",
     "react-query": "^3.39.3",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
