--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,14 +4,11 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
-    
     {
       "name": "Next.js: debug server-side",
       "port": 9230,
       "request": "attach",
-      "skipFiles": [
-        "<node_internals>/**"
-      ],
+      "skipFiles": ["<node_internals>/**"],
       "type": "node"
     },
     {
@@ -25,7 +22,10 @@
   "compounds": [
     {
       "name": "Next.js fullstack debugging",
-      "configurations": ["Next.js: debug client-side", "Next.js: debug server-side"],
+      "configurations": [
+        "Next.js: debug client-side",
+        "Next.js: debug server-side"
+      ],
       "stopAll": true
     }
   ]
