add user session logic to header and remove lucia

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,29 @@
-apiKey=APIKEYHERE
+NEXT_PUBLIC_TMDB_BEARER_TOKEN=changeThis
+NEXT_PUBLIC_TMDB_IMAGE_BASE_URL=https://image.tmdb.org/t/p/w500
+NEXT_PUBLIC_TMDB_POPULAR_MOVIES_URL=https://api.themoviedb.org/3/movie/popular?language=en&page=1
+NEXT_PUBLIC_TMDB_TOP_RATED_MOVIES_URL=https://api.themoviedb.org/3/movie/top_rated?language=en&page=1
+NEXT_PUBLIC_TMDB_TRENDING_MOVIES_DAY_URL=https://api.themoviedb.org/3/trending/movie/day?language=en&page=1
+NEXT_PUBLIC_TMDB_TRENDING_MOVIES_WEEK_URL=https://api.themoviedb.org/3/trending/movie/week?language=en&page=1
+NEXT_PUBLIC_TMDB_MOVIE_GENRES_URL=https://api.themoviedb.org/3/genre/movie/list?language=en
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+POSTGRES_URL=changethis
+POSTGRES_PRISMA_URL=changethis
+POSTGRES_URL_NO_SSL=changethis
+POSTGRES_URL_NON_POOLING=changethis
+POSTGRES_USER=changethis
+POSTGRES_HOST=changethis
+POSTGRES_PASSWORD=changethis
+POSTGRES_DATABASE=changethis
+
+#Next Auth settings
+AUTH_SECRET=DqgHScgsvq9o96V3YjLPBNTyKUg5SZt8XfDrE1EPfok
+AUTH_GITHUB_ID="changeMe"
+AUTH_GITHUB_SECRET="changeMe"
+
+
