--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.7.0",
     "@lucia-auth/adapter-prisma": "^4.0.1",
     "@prisma/client": "^5.20.0",
     "@radix-ui/react-avatar": "^1.1.1",
@@ -25,7 +26,7 @@
     "lucia": "^3.2.1",
     "lucide-react": "^0.447.0",
     "next": "^15.0.0-rc.0",
-    "prisma": "^5.20.0",
+    "next-auth": "^4.24.8",
     "react": "^19.0.0-rc-09111202-20241011",
     "react-dom": "^19.0.0-rc-09111202-20241011",
     "react-query": "^3.39.3",
@@ -41,6 +42,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
     "postcss": "^8",
+    "prisma": "^5.20.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
